Bug 89720 - Highlighted comment text with replies have dark color
Summary: Highlighted comment text with replies have dark color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 Daily
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.2 target:4.4.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Apple, because, Libre, of, Office, opening, problem, Writer-Comments
  Show dependency treegraph
 
Reported: 2015-02-27 13:45 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-02-24 18:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
yellow and blue are being fixed for the hightlight color (15.47 KB, image/png)
2015-02-27 13:45 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-02-27 13:45:31 UTC
Created attachment 113750 [details]
yellow and blue are being fixed for the hightlight color

Starting in 4.3, comments with replies merge the colors from various highlights together causing the resulting text highlight to be dark.

Sample doc: attachment 113722 [details]

Version: 4.5.0.0.alpha0+
Build ID: 4cf69df2f543b023f4ec3d4279c5ac11a2a819d9
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-02-21_03:46:34
Comment 1 Buovjaga 2015-03-04 14:06:01 UTC
Confirmed that the tooltips highlight is dark in all other tested versions except 4.2.

Win 7 Pro 64-bit Version: 4.5.0.0.alpha0+
Build ID: 7c0eb12009496a35c927cd5b2520f9c34d50860b
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-03-03_10:52:12
Locale: fi_FI

Ubuntu 14.10 64-bit 
Version: 4.4.1.2
Build ID: 40m0(Build:2)
Locale: en_US

Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Comment 2 Yousuf Philips (jay) (retired) 2015-03-15 16:54:36 UTC
I should clarify that it wasnt comments with replies, but comments which have comment selections that overlap each other.
Comment 3 Matthew Francis 2015-03-17 05:26:29 UTC
Bibisect results from 43all:
 f780f9a999d8300a2a72658063d6e823000fbae4 is the first bad commit
commit f780f9a999d8300a2a72658063d6e823000fbae4
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sun May 11 00:36:04 2014 +0000

    source-hash-4356aef48a8fcbd9dd019c0ca2d6a189d7332d0c

The below commit looks like the only real candidate in this range.
Adding Cc: to vmiklos@collabora.co.uk; Could you possibly take a look at this? Thanks

commit 0761f81643a6890457e9ef7d913ab5c88c2593a4
Author:     Oliver-Rainer Wittmann <orw@apache.org>
AuthorDate: Thu Dec 19 18:50:58 2013 +0000
Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
CommitDate: Wed Jan 8 15:58:35 2014 +0100

    123792: complete annotations on text ranges feature
    
    - rely annotations on text ranges on new annotation marks
    - support arbitrary text ranges for annotations
    - fix undo/redo regarding annotations an text ranges
    - support annotations on overlapping text ranges
    - fix *.docx import for annotations on overlapping text ranges
    - fix ODF import of annotations on text ranges
    
    cherry-picked from branch ooxml-osba
    
    (cherry picked from commit ebd2922ebd3cf2d3899fb80780d38f367197aadf)
Comment 4 Miklos Vajna 2015-07-29 17:08:42 UTC
In 4.2 only the color of the original note determined the overlay color, while now all do this, so need to disable the range overlay for "reply" post-its. I'll take care of this.
Comment 5 Commit Notification 2015-07-30 07:19:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=780dd8c1cf5302ca503cf7b55357dace4d69beb9

tdf#89720 sw: do not create text range overlay for reply annotations

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-08-12 12:53:49 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=545a0c19494a7d55e514831b9a4d81197ab01c57&h=libreoffice-5-0

tdf#89720 sw: do not create text range overlay for reply annotations

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-08-20 09:25:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7ef02b34a47869a582dfd1dc6c1291e20c029eed&h=libreoffice-4-4

tdf#89720 sw: do not create text range overlay for reply annotations

It will be available in 4.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 08:47:32 UTC Comment hidden (obsolete)