tdf#89720 sw: do not create text range overlay for reply annotations

Regression from commit 0761f81643a6890457e9ef7d913ab5c88c2593a4 (123792:
complete annotations on text ranges feature, 2013-12-19), the problem
was that in case a comment had a reply, then both comments produced its
range overlay, and this repeated semi-transparent overlay resulted in
dark color.

Go back to the old behavior of just painting the overlay for the
non-reply comment; for real, partly overlapping comments showing the
exact boundaries of the overlapping overlays still makes sense.

(cherry picked from commit 780dd8c1cf5302ca503cf7b55357dace4d69beb9)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx

Change-Id: Ic2673a1a41146ff547262ba681b34a63f41aa8ff